# semantic_search_demo

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs
