[package]
name = "semantic_search_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
hf-hub = { version = "0.3.2" }
qdrant-client = "1.12.1"
tokenizers = { version = "0.21.0" }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.133"

candle-transformers = { version = "0.8.1" }
candle-nn = { version = "0.8.1" }
candle-core = { version = "0.8.1" }
anyhow = "1.0.94"
serde = { version = "1.0.216", features = ["derive"] }
indicatif = "0.17.9"
clap = { version = "4.5.23", features = ["derive", "color", "usage", "suggestions"] }

[features]
metal = ["candle-transformers/metal", "candle-nn/metal", "candle-core/metal"]
cuda = ["candle-transformers/cuda", "candle-nn/cuda", "candle-core/cuda"]

